# agentkit

./: .dockerignore  .gitignore  AGENTS.md  README.md  SPEC.md  start.sh
.specify/: feature.json
backend/: pyproject.toml  pyrightconfig.json  requirements.txt
backend/src/: main.py
backend/src/api/: runs.py  schemas.py
backend/src/db/: init.py  session.py
backend/src/models/: run.py  step.py
backend/src/services/: agent_loop.py  guards.py  llm.py  tool_registry.py  tool_runtime.py
backend/tests/: conftest.py
backend/tests/integration/: test_concurrent_runs.py  test_full_run.py
backend/tests/scenarios/: cost_cap.json  default.json  step_cap.json  stuck.json  success.json  tool_error_exhausted.json  tool_error_nonrecoverable.json  tool_error_recoverable.json
backend/tests/unit/: test_guards.py  test_stuck_detection.py  test_tool_retrieval.py  test_tool_runtime.py
frontend/: .eslintrc.json  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
prompts/: Add-README-with-app-description-and-startsh.md  Add-opencode-browser-to-opencode.md  Adding-human-readable-descriptions-to-scenarios.md  Agent-backend-API-frontend-implementation.md  Agent-loop-RESTful-API-with-persistence.md  Apply-backend-spec-validation-fixes.md  Backend-agent-loop-implementation.md  Backend-type-checking-and-fix-plan.md  Browser-automation-testing-for-agent-UI-fork-1.md  Browser-automation-testing-for-agent-UI.md  Debug-tool_error_nonrecoverable-success.md  Feature-implementation-planning-workflow.md  Feature-spec-clarification.md  (+14 more)
(+48 files in other folders)
