[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-loop-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend.src"]

[tool.mypy]
python_version = "3.12"
mypy_path = ".."
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["override", "import-untyped", "no-untyped-def", "no-untyped-call", "type-arg", "misc", "assignment", "type-var", "no-any-return"]

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
